--- a/ForthStreetRecyclingGame/.gitignore
+++ b/ForthStreetRecyclingGame/.gitignore
@@ -70,3 +70,9 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# TextMesh Pro
+TextMesh Pro/
+
+# ds_store files in any folder
+*/.DS_Store
